first commit - raw version

--- a/web/display.html
+++ b/web/display.html
@@ -2,8 +2,14 @@
 <html>
 
 <head>
+    <!--
     <link rel="stylesheet" href="/css/almond.min.css" />
     <link rel="stylesheet" href="/css/display.css">
+    -->
+    <link href="/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/fonts.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/utility.css">
+    <link rel="stylesheet" href="/css/cv.css">
     <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.32.3/src-min-noconflict/ace.js"></script>
     <script src="/js/display.js"></script>
 </head>
