first smartcv ai version

--- a/packages/dreamingfuture/cv/index.html
+++ b/packages/dreamingfuture/cv/index.html
@@ -21,20 +21,20 @@
         <div class="details">
           <div class="item bottomLineSeparator">
             <h2>
-              CONTACT
+              CONTATTI
             </h2>
             <div class="smallText">
               <p>
                 <i class="fa fa-phone contactIcon" aria-hidden="true"></i>
-                <span id="phone">(+33) 777 777 77</span>
+                <span id="phone">+39 333 3333333</span>
               </p>
               <p>
                 <i class="fa fa-envelope contactIcon" aria-hidden="true"></i>
-                <span id="email">lorem@ipsum.com</span>
+                <span id="email">username@mail.com</span>
               </p>
               <p>
                 <i class="fa fa-map-marker contactIcon" aria-hidden="true"></i>
-                <span id="address">New York, USA</span>
+                <span id="address">Milano, IT</span>
               </p>
               <!--
               <p>
@@ -46,23 +46,23 @@
           </div>
           <div class="item bottomLineSeparator">
             <h2>
-              HARD SKILLS
+              COMPETENZE
             </h2>
             <div class="smallText" id="hardSkill">
               <div class="skill" id="hardSkill-1">
-                <span>Accounting</span>
+                <span>Office</span>
               </div>
 
               <div class="skill" id="hardSkill-2">
-                <span>Word</span>
+                <span>Scrittura</span>
               </div>
 
               <div class="skill" id="hardSkill-3">
-                <span>Powerpoint</span>
+                <span>Modelli Finanziari</span>
               </div>
 
               <div class="skill" id="hardSkill-4">
-                <span>Accounting</span>
+                <span>Statistica</span>
               </div>
 
               <div class="skill" id="hardSkill-5">
@@ -81,18 +81,18 @@
           </div>
           <div class="item bottomLineSeparator">
             <h2>
-              EDUCATION
+              FORMAZIONE
             </h2>
             <div id="educationSection">
               <div class="smallText" id="education-1">
                 <p class="bolded white" id="eduTitle">
-                  Bachelor of Economics
+                  Laurea in Economia
                 </p>
                 <p id="eduInstitute">
-                  The University of Sydney
+                  Università Bocconi
                 </p>
                 <p id="eduYears">
-                  2010 - 2014
+                  2010 - 2015
                 </p>
               </div>
             </div>
@@ -104,43 +104,43 @@
             <div class="smallText" id="softSkill">
 
               <div class="skill" id="softSkill-1">
-                <span>Listening</span>
+                <span>Ascolto</span>
               </div>
 
               <div class="skill" id="softSkill-2">
-                <span>Fast Learning</span>
+                <span>Creatività</span>
               </div>
 
               <div class="skill" id="softSkill-3">
-                <span>Team Work</span>
+                <span>Lavoro di squadra</span>
               </div>
 
               <div class="skill" id="softSkill-4">
-                <span>Creativity</span>
+                <span>Capacità relazionali</span>
               </div>
 
               <div class="skill" id="softSkill-5">
-                <span>Problem Solving</span>
+                <span>Resistenza allo stress</span>
               </div>
 
             </div>
           </div>
           <div class="item">
             <h2>
-              LANGUAGES
+              LINGUE
             </h2>
             <div class="smallText" id="languagesList">
               <div class="skill" id="language-1">
                 <div>
-                  <span id="lang-1">English</span>
+                  <span id="lang-1">Italiano</span>
                 </div>
                 <div class="yearsOfExperience">
-                  <span id="langLevel-1" class="alignright">C2</span>
+                  <span id="langLevel-1" class="alignright">Madrelingua</span>
                 </div>
               </div>
               <div class="skill" id="language-2">
                 <div>
-                  <span id="lang-2">Spanish</span>
+                  <span id="lang-2">Inglese</span>
                 </div>
                 <div class="yearsOfExperience">
                   <span id="langLevel-2" class="alignright">B2</span>
@@ -154,44 +154,41 @@
       <div class="rightPanel">
         <div>
           <h1 id="name">
-            Jhon Doe
+            Nome Cognome
           </h1>
           <div class="smallText">
             <h3 id="position">
-              Accountant
+              Posizione Lavorativa
             </h3>
           </div>
         </div>
         <div>
           <h2>
-            About me
+            Informazioni
           </h2>
-          <div class="smallText" id="aboutMe">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris venenatis, justo sed feugiat pulvinar., quam ipsum tincidunt enim, ac gravida est metus sit amet neque. Curabitur ut arcu ut nunc finibus accumsan id id elit. 
-            </p>
-            <p>
-              Vivamus non magna quis neque viverra finibus quis a tortor. 
+          <div class="smallText">
+            <p id="aboutMe">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris venenatis, justo sed feugiat pulvinar, quam ipsum tincidunt enim, ac gravida est metus sit amet neque. Curabitur ut arcu ut nunc finibus accumsan id id elit. Vivamus non magna quis neque viverra finibus quis a tortor. 
             </p>
           </div>
         </div>
         <div class="workExperience">
           <h2>
-            Work experience
+            Esperienza
           </h2>
           <ul id="workExperiences">
             <li id="job-1">
               <div class="jobPosition">
                 <span class="bolded" id="jobPosition-1">
-                  Accountant
+                  Economista
                 </span>
                 <span id="jobDates-1">
-                  Jun 2014 - Sept 2015
+                  Ott 2021 - ad oggi
                 </span>
               </div>
               <div class="projectName bolded">
                 <span id="jobProjectCompany-1">
-                  Accounting project name | Company name
+                  Progetto | Azienda
                 </span>
               </div>
               <div class="smallText">
@@ -205,7 +202,7 @@
                 </ul>
                 <p>
                   <span class="bolded">Skills: </span>
-                  <span id="jobSkills-1">Accounting, Word, Powerpoint</span>
+                  <span id="jobSkills-1">Marketing, Word, Powerpoint</span>
                 </p>
               </div>
             </li>
@@ -217,12 +214,12 @@
                   Digital Marketing Expert
                 </span>
                 <span id="jobDates-2">
-                  Nov 2020 - Sept 2021
+                  Nov 2020 - Set 2021
                 </span>
               </div>
               <div class="projectName bolded">
                 <span id="jobProjectCompany-2"> 
-                  Project name | Company name
+                  Progetto | Azienda
                 </span>
               </div>
               <div class="smallText">
@@ -239,7 +236,7 @@
                 </ul>
                 <p>
                   <span class="bolded">Skills: </span> 
-                  <span id="jobSkills-2">Writing, Photoshop</span> 
+                  <span id="jobSkills-2">Scrittura, Photoshop</span> 
                 </p>
               </div>
             </li>
@@ -247,15 +244,15 @@
             <li id="job-3">
               <div class="jobPosition">
                 <span class="bolded" id="jobPosition-3">
-                  Accountant
+                  Copywriter
                 </span>
                 <span id="jobDates-3">
-                  Jun 2017 - May 2020
+                  Giu 2016 - Mag 2020
                 </span>
               </div>
               <div class="projectName bolded">
                 <span id="jobProjectCompany-3">
-                  Project name | Company name
+                  Progetto | Azienda
                 </span>
               </div>
               <div class="smallText">
@@ -276,7 +273,7 @@
                 </ul>
                 <p>
                   <span class="bolded">Skills: </span>
-                  <span id="jobSkills-3">Management, French</span>
+                  <span id="jobSkills-3">Scrittura, Inglese</span>
                 </p>
               </div>
             </li>
