--- a/web/display.html
+++ b/web/display.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="/css/almond.min.css" />
     <link rel="stylesheet" href="/css/display.css">
     -->
-    <link href="/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/css/fonts.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/utility.css">
     <link rel="stylesheet" href="/css/cv.css">
+    <link rel="stylesheet" href="/css/responsive.css">
     <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.32.3/src-min-noconflict/ace.js"></script>
     <script src="/js/display.js"></script>
 </head>
@@ -20,5 +21,9 @@
         <p>Please select the chat you want to use on the top menu.</p>
     </div>
 </body>
+
+<!--
+<script src="/js/dynamic-overflow.js"></script> 
+-->
 
 </html>
