created two versions of the CV ai, one with completion and the other with assistant (threads)

--- a/packages/dreamingfuture/cvassistant/index.html
+++ b/packages/dreamingfuture/cvassistant/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-  <link href="./css/font-awesome.min.css" rel="stylesheet">
-  <link href="./css/fonts.css" rel="stylesheet">
-  <link rel="stylesheet" href="./css/cv.css">
-  <link rel="stylesheet" href="./css/utility.css">
-  -->
 </head>
 <body>
   <page size="A4">
@@ -34,7 +28,7 @@
               </p>
               <p>
                 <i class="fa fa-map-marker contactIcon" aria-hidden="true"></i>
-                <span id="address">Milano, IT</span>
+                <span id="address">Città, IT</span>
               </p>
               <!--
               <p>
@@ -50,31 +44,27 @@
             </h2>
             <div class="smallText" id="hardSkill">
               <div class="skill" id="hardSkill-1">
-                <span>Office</span>
+                <span>Competenza 1</span>
               </div>
 
               <div class="skill" id="hardSkill-2">
-                <span>Scrittura</span>
+                <span>Competenza 2</span>
               </div>
 
               <div class="skill" id="hardSkill-3">
-                <span>Modelli Finanziari</span>
+                <span>Competenza 3</span>
               </div>
 
               <div class="skill" id="hardSkill-4">
-                <span>Statistica</span>
+                <span>Competenza 4</span>
               </div>
 
               <div class="skill" id="hardSkill-5">
-                <span>Marketing</span>
+                <span>Competenza 5</span>
               </div>
 
               <div class="skill" id="hardSkill-6">
-                <span>Photoshop</span>
-              </div>
-
-              <div class="skill" id="hardSkill-7">
-                <span>Management</span>
+                <span>Competenza 6</span>
               </div>
 
             </div>
@@ -86,10 +76,10 @@
             <div id="educationSection">
               <div class="smallText" id="education-1">
                 <p class="bolded white" id="eduTitle">
-                  Laurea in Economia
+                  Laurea in XYZ
                 </p>
                 <p id="eduInstitute">
-                  Università Bocconi
+                  Università XYZ
                 </p>
                 <p id="eduYears">
                   2010 - 2015
@@ -104,23 +94,23 @@
             <div class="smallText" id="softSkill">
 
               <div class="skill" id="softSkill-1">
-                <span>Ascolto</span>
+                <span>Competenza 1</span>
               </div>
 
               <div class="skill" id="softSkill-2">
-                <span>Creatività</span>
+                <span>Competenza 2</span>
               </div>
 
               <div class="skill" id="softSkill-3">
-                <span>Lavoro di squadra</span>
+                <span>Competenza 3</span>
               </div>
 
               <div class="skill" id="softSkill-4">
-                <span>Capacità relazionali</span>
+                <span>Competenza 4</span>
               </div>
 
               <div class="skill" id="softSkill-5">
-                <span>Resistenza allo stress</span>
+                <span>Competenza 5</span>
               </div>
 
             </div>
@@ -180,7 +170,7 @@
             <li id="job-1">
               <div class="jobPosition">
                 <span class="bolded" id="jobPosition-1">
-                  Economista
+                  Posizione
                 </span>
                 <span id="jobDates-1">
                   Ott 2021 - ad oggi
@@ -201,8 +191,8 @@
                   </li>
                 </ul>
                 <p>
-                  <span class="bolded">Skills: </span>
-                  <span id="jobSkills-1">Marketing, Word, Powerpoint</span>
+                  <span class="bolded">Competenze: </span>
+                  <span id="jobSkills-1">Competenza 1, Competenza 2, Competenza 3</span>
                 </p>
               </div>
             </li>
@@ -211,7 +201,7 @@
             <li id="job-2">
               <div class="jobPosition">
                 <span class="bolded" id="jobPosition-2">
-                  Digital Marketing Expert
+                  Posizione
                 </span>
                 <span id="jobDates-2">
                   Nov 2020 - Set 2021
@@ -235,8 +225,8 @@
                   </li>
                 </ul>
                 <p>
-                  <span class="bolded">Skills: </span> 
-                  <span id="jobSkills-2">Scrittura, Photoshop</span> 
+                  <span class="bolded">Competenze: </span> 
+                  <span id="jobSkills-2">Competenza 1, Competenza 2</span> 
                 </p>
               </div>
             </li>
@@ -244,7 +234,7 @@
             <li id="job-3">
               <div class="jobPosition">
                 <span class="bolded" id="jobPosition-3">
-                  Copywriter
+                  Posizione
                 </span>
                 <span id="jobDates-3">
                   Giu 2016 - Mag 2020
@@ -272,8 +262,8 @@
                   </li>
                 </ul>
                 <p>
-                  <span class="bolded">Skills: </span>
-                  <span id="jobSkills-3">Scrittura, Inglese</span>
+                  <span class="bolded">Competenze: </span>
+                  <span id="jobSkills-3">Competenza 1, Competenza 2</span>
                 </p>
               </div>
             </li>
@@ -282,16 +272,5 @@
       </div>
     </div>
   </page>
-  <!-- page two
-  <page size="A4">
-    <div class="container">
-      <div class="leftPanel">
-      </div>
-      <div class="rightPanel">
-      </div>
-  </page>   
-  -->
 </body>
-  <!-- thanks to https://gist.github.com/Iftimie/2e358c4720d6d790c837bf01ac6b4b54 
-  https://medium.com/@iftimiealexandru/creating-a-resume-using-html-and-css-and-saving-it-as-a-pdf-e85d24b0408e -->
 </html>
