--- a/packages/dreamingfuture/cvassistant/index.html
+++ b/packages/dreamingfuture/cvassistant/index.html
@@ -173,7 +173,7 @@
                   Posizione
                 </span>
                 <span id="jobDates-1">
-                  Ott 2021 - ad oggi
+                  Data Inizio - Data Fine
                 </span>
               </div>
               <div class="projectName bolded">
@@ -204,7 +204,7 @@
                   Posizione
                 </span>
                 <span id="jobDates-2">
-                  Nov 2020 - Set 2021
+                  Data Inizio - Data Fine
                 </span>
               </div>
               <div class="projectName bolded">
@@ -237,7 +237,7 @@
                   Posizione
                 </span>
                 <span id="jobDates-3">
-                  Giu 2016 - Mag 2020
+                  Data Inizio - Data Fine
                 </span>
               </div>
               <div class="projectName bolded">
