--- a/packages/dreamingfuture/cvcompletion/index.html
+++ b/packages/dreamingfuture/cvcompletion/index.html
@@ -82,7 +82,7 @@
                   Università XYZ
                 </p>
                 <p id="eduYears">
-                  2010 - 2015
+                  YYYY - YYYY
                 </p>
               </div>
             </div>
@@ -122,7 +122,7 @@
             <div class="smallText" id="languagesList">
               <div class="skill" id="language-1">
                 <div>
-                  <span id="lang-1">Italiano</span>
+                  <span id="lang-1">Lingua 1</span>
                 </div>
                 <div class="yearsOfExperience">
                   <span id="langLevel-1" class="alignright">Madrelingua</span>
@@ -130,7 +130,7 @@
               </div>
               <div class="skill" id="language-2">
                 <div>
-                  <span id="lang-2">Inglese</span>
+                  <span id="lang-2">Lingua 2</span>
                 </div>
                 <div class="yearsOfExperience">
                   <span id="langLevel-2" class="alignright">B2</span>
@@ -173,7 +173,7 @@
                   Posizione
                 </span>
                 <span id="jobDates-1">
-                  Ott 2021 - ad oggi
+                  Data Inizio - Data Fine
                 </span>
               </div>
               <div class="projectName bolded">
@@ -204,7 +204,7 @@
                   Posizione
                 </span>
                 <span id="jobDates-2">
-                  Nov 2020 - Set 2021
+                  Data Inizio - Data Fine
                 </span>
               </div>
               <div class="projectName bolded">
@@ -237,7 +237,7 @@
                   Posizione
                 </span>
                 <span id="jobDates-3">
-                  Giu 2016 - Mag 2020
+                  Data Inizio - Data Fine
                 </span>
               </div>
               <div class="projectName bolded">
